# bugrest

./: .hgtags  README.rst  br  bugs.rst  publish  pyproject.toml  runtests.sh  setup.py  tickets.rst
betterRest/: cli.py  style.css
betterRest_impress/: README.rst  TODO.rst  __init__.py
betterRest_impress/static/: README.txt  impress.css  mermaid.css
betterRest_jira/: __init__.py
betterRest_jira_example/: __init__.py
bugrest/: code.js
bugrest_jira/: __init__.py
bugrest_jira_example/: __init__.py
tests/: conftest.py  test_create.py
