[build-system]
requires = [
    "poetry_core>=1.0.0",
    ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "betterRest"
version = "1.0.0"
description = "Awesome minimalist command line ticket/bug tracker based on ReStructuredText (former bugrest)"
authors = [ "fdev31 <fdev31@gmail.com>" ]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/fdev31/bugrest"
classifiers = [
        'Environment :: Console',
        'Development Status :: 4 - Beta',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.1',
        'Programming Language :: Python :: 3.2',
        'Programming Language :: Python :: 3.3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
]

packages = [
    { include = "betterRest" },
    { include = "betterRest/*.css" },
    { include = "betterRest_jira" },
    { include = "betterRest_jira_example" },
    { include = "betterRest_impress" },
]


[tool.poetry.scripts]
br = 'betterRest.cli:commandline'

[tool.poetry.dependencies]
docutils = ">= 0.12"
python = ">=3.8"

python-dateutil = {version="^2.8.2", optional=true}
jira = {version="^3.1.1", optional=true}
six = {version="^1.16", optional=true}
pygments = {version="^2.12.0", optional=true}

[tool.poetry.extras]
jira = ["jira", "six"]
color = ["pygments"]

# Other tools

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
strict = false
plugins = "pydantic.mypy"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

